--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     understanding of the customer
                     experience.
                 </span>
-                <img src="/simple-feature-section/img/photo_2.png" alt="photo_2" style="border-radius: 1rem;">
+                <img src="/img/photo_2.png" alt="photo_2" style="border-radius: 1rem;">
             </div>
             <div class="img-widget">
                 <span class="emoji-circle" style="background-color: #DEE9FC;">
@@ -48,7 +48,7 @@
                     questions that may not yield
                     actionable insights.
                 </span>
-                <img src="/simple-feature-section/img/photo_1.png" alt="photo_1" style="border-radius: 1rem;">
+                <img src="/img/photo_1.png" alt="photo_1" style="border-radius: 1rem;">
             </div>
             <div class="img-widget">
                 <span class="emoji-circle" style="background-color: #FBE5E6;">
@@ -62,7 +62,7 @@
                     improvements you've made in
                     response to their feedback.
                 </span>
-                <img src="/simple-feature-section/img/photo_3.png" alt="photo_3" style="border-radius: 1rem;">
+                <img src="/img/photo_3.png" alt="photo_3" style="border-radius: 1rem;">
             </div>
         </div>
     </section>
